# generate_stars

./: .gitignore  README.md  generate_stars_launcher.py  pyproject.toml
.github/workflows/: build-bundles.yml
generate_stars/: __init__.py  app.py  canvas.py  cluster_configuration.py  config.py  constants.py  default_config.toml  generator.py  history.py  localization.py  models.py  preferences.py  project_state.py  shapes.py
generate_stars/controllers/: __init__.py  editor_controller.py  view_models.py
generate_stars/ui/: __init__.py  canvas.py  cluster_panel.py  distribution_panel.py  parameter_panel.py  sidebar.py  toolbar.py  trash_panel.py  widgets.py  window.py
packaging/: generate-stars.spec
scripts/: build_bundle.py
tests/: test_canvas.py  test_config.py  test_controller.py  test_generator.py  test_history.py  test_localization.py  test_preferences.py  test_project_state.py
