[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "generate-stars"
version = "0.1.0"
description = "GTK4 desktop app for generating clustered star coordinates."
requires-python = ">=3.14"

[project.scripts]
generate-stars = "generate_stars.__main__:main"
